(PC-19202)[PRO] fix: set correct width for stockThing fields, set correct stock action left margin and vertical alignment

--- a/pro/src/components/StockThingForm/StockThingForm.module.scss
+++ b/pro/src/components/StockThingForm/StockThingForm.module.scss
@@ -1,7 +1,15 @@
 @use 'styles/mixins/_rem.scss' as rem;
 
-.input-quantity {
-  flex: 1 0 rem.torem(112px);
+.input-price, .input-quantity {
+  width: rem.torem(146px);
+}
+
+.input-booking-limit-datetime {
+  flex: 1 0 rem.torem(316px);
+}
+
+.input-activation-code {
+  flex: 1 0 rem.torem(160px);
 }
 
 .field-layout-footer {
